fixed test | added methods
